<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/presenter_section_horizontal_margin"
    android:paddingEnd="@dimen/presenter_section_horizontal_margin"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:paddingStart="@dimen/text_input_layout_padding"
        android:paddingEnd="@dimen/text_input_layout_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameValue"
            style="@style/PF_Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:minHeight="@dimen/input_edit_text_minimum_height"
            tools:text="Account name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:paddingStart="@dimen/text_input_layout_padding"
        android:paddingEnd="@dimen/text_input_layout_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneValue"
            style="@style/PF_Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:minHeight="@dimen/input_edit_text_minimum_height"
            android:inputType="phone"
            tools:text="1234-1234" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:paddingStart="@dimen/text_input_layout_padding"
        android:paddingEnd="@dimen/text_input_layout_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailValue"
            style="@style/PF_Body"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:minHeight="@dimen/input_edit_text_minimum_height"
            tools:text="$186.00" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.chalkbox.propertyfinder.views.SettingValuesRadioGroup
        android:id="@+id/genderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>